<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sketch Pen</string>
    <string name="action_reset">Erase all</string>
    <string name="action_save_image">Save image</string>
    <string name="action_view_image">View images</string>
    <string name="action_save_and_share_image">Save and share</string>
    <string name="alert_reset_image_title">Reset Image</string>
    <string name="dialogue_scanning_media_title">Scanning Media</string>
    <string name="dialogue_scanning_media_body">Please wait&#8230;</string>
    <string name="toast_scanning_media_not_found">No saved image found</string>
    <string name="share_image_text">This image is generated by Sketch Pen.\nA free and light weight Android application.\nPlease visit below link to install&#8230;\n\nhttp://play.google.com/store/apps/details?id=com.devdroid.sketchpen</string>
	<string name="chooser_share_title">Share</string>
	<string name="toast_save_image_error">Error occurred during saving image</string>
	<string name="toast_save_image_success">Image saved</string>
	
	<string name="action_settings">Settings</string>
	<string name="label_forecolor">Fore Color</string>
	<string name="label_show_circle">Show circle</string>
	<string name="label_backcolor">Back Color</string>
	<string name="label_default_size">12</string>
	<string name="button_label_default">Reset settings</string>
	
	<string name="alert_rate_title">Rate this app</string>
	<string name="alert_rate_body">Do you want to rate this app?</string>
	
	<string name="alert_close_app_title">Close this app</string>
	<string name="alert_close_app_body">Do you want to close this app?</string>
	
	<string name="action_insert_image">Insert image</string>
	

	<!-- Slider menu start  -->
	<string name="action_rate">Rating and review</string>
	<string name="action_eraser">Eraser</string>
	<string name="eraser_active">Active</string>
	<string name="eraser_inactive">Inactive</string>
	<string name="toast_message_file_not_found">No saved image is found</string>
	<string name="label_size">Stroke size</string>
    <string name="label_eraser">Eraser size</string>
    <string name="label_default_eraser_size">12</string>
    
    <string name="action_buy_ad_free">Buy Ad free</string>
    
    <string name="action_like">Like us</string>
    <string name="label_message_eraser">Choose this option again to disable eraser</string>
    
    <string name="msg_external_storage_error">Try to select image from phone/external memory</string>
    <string name="msg_general_error">This action is not supported by your device</string>
    
    <string name="label_reset_foreground">Reset foreground only</string>
    <string name="label_reset_background">Reset background only</string>
    <string name="label_reset_all">Reset all</string>

    <string name="action_enable_eraser">Enable eraser</string>
    <string name="action_disable_eraser">Disable eraser</string>
    <string name="label_message_eraser_on">Eraser ON</string>
    <string name="label_message_eraser_off">Eraser OFF</string>

    <string name="msg_payment_canceled">You canceled the payment</string>
    <string name="msg_payment_refunded">Payment failed, it will be refunded if paid</string>
    <string name="msg_payment_done">Payment done successfully, Thank you!</string>
    
</resources>